2005-05-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.21 "corn" is released.

2005-05-15  Marcus Crestani  <crestani@xemacs.org>

	* diagnose.el: Lrecord and string data statistics.
	* diagnose.el (show-memory-usage): Add output for additional
	lrecord statistics (currently only string data).
	* diagnose.el (show-lrecord-stats): New. Print detailed lrecord
	statistics.

2005-05-10  Aidan Kehoe  <kehoea@parhasard.net>

	* menubar-items.el (default-menubar):
	* simple.el:
	* simple.el (mail-user-agent):
	* simple.el (vm-user-agent):
	* simple.el ('vm-user-agent): New.
	* simple.el (xemacs-default-composefunc): New.
	* simple.el (xemacs-default-sendfunc): New.
	* simple.el ('xemacs-default-mail-user-agent): New.
        Update the docstring for mail-user-agent to mention VM; default to 
        sendmail-user-agent, but on first use, give a huge warning that it 
        is underfeatured and not likely to get better in the medium term, 
        and the user should choose another mail client. 
	
2005-05-10  Aidan Kehoe  <kehoea@parhasard.net>

	* x-init.el (x-initialize-keyboard): Give info about any unbound
	Unicode keysyms. 

2005-05-10  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/european.el:
	* mule/latin.el:
	Add full syntax table and case mapping information for
	iso-8859-14, iso-8859-15, iso-8859-16. 
	
2005-05-05  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-ccl.el (define-ccl-program): Spelling and grammar fix
	in docstring. 

2005-05-05  Aidan Kehoe  <kehoea@parhasard.net>

	* map-ynp.el: Grammar fix in comment. 

2005-05-05  Aidan Kehoe  <kehoea@parhasard.net>

	* startup.el (command-line): Call font-lock-set-defaults to make
	the user's choice of fontification take effect in *scratch*. 

2005-04-12  Mike Sperber  <mike@xemacs.org>

	* minibuf.el (get-user-response): Move here from dialog.el so it
	works even when dialogs are not available.
	* dialog.el: See above.

2005-04-01  Marcus Crestani  <crestani@xemacs.org>

	The new allocator.
